# rp2040-embassy-template

./: Cargo.toml  build.rs  cargo-generate.toml
.cargo/: config.toml
src/: main.rs
