[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m", 
    "executor-thread", 
    "executor-interrupt", 
    {% if defmt -%}
    "defmt",
    {%- endif %}
] }
embassy-rp = { version = "0.9.0", features = [
    "unstable-pac", 
    "time-driver", 
    "critical-section-impl", 
    "rp2040",
    {% if defmt -%}
    "defmt",
    {%- endif %}
]}
embassy-time = { version = "0.5.0", features = [
    "defmt-timestamp-uptime",
    {% if defmt -%}
    "defmt",
    {%- endif %}
] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
# critical-section = "1.1"

{% if defmt -%}
# defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
{% else -%}
panic-halt = "1.0.0"
{% endif -%}


